// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ZipCodeField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="text_zip"
      >
        Kod pocztowy
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="testId"
          label="Kod pocztowy"
          name="text_zip"
          placeholder="Kod pocztowy"
          value="50600"
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<ZipCodeField/> matches snapshot 1`] = `
<input
  class="sc-crzoUp kUQhja"
  id="testId"
  label="Kod pocztowy"
  name="text_zip"
  placeholder="Kod pocztowy"
  value=""
/>
`;

exports[`<ZipCodeField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="text_zip"
      >
        Zip Code*
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="testId"
          label="Zip Code"
          name="text_zip"
          placeholder="Kod pocztowy*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<ZipCodeField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="text_zip"
      >
        ZipCode
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp kUQhja"
          id="testId"
          label="ZipCode"
          name="text_zip"
          placeholder="Kod pocztowy"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
